fix contrast ratio issue with links

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ header {
     padding: 0.5rem;
     margin-bottom: 1rem;
 }
-header p { /* controls visibility of tag line */
+header h1 { /* controls visibility of tag line */
     display: none;
 }
 
@@ -108,6 +108,13 @@ input:focus {
     color: white;
     font-size: 200%;
     margin: 0;
+}
+
+.title a,
+.title a:active,
+.title a:focus {
+    color: #011B4B;
+    text-decoration: none;
 }
 
 .status {
@@ -340,12 +347,13 @@ footer {
 
 /* Desktop Layout */
 @media (min-width: 962px) {
-    header p {
+    header h1 {
         position: relative;
         padding: 0.75rem;
         height: fit-content;
         margin-left: auto;
         margin-bottom: 0px;
+        font-size: 1.5rem;
         display: inline;
     }
 
